deploy/infrastructure/traefik-ingress/vault-loadbalancer.yaml
---
# LoadBalancer сервис для Vault UI на порту 8200
apiVersion: v1
kind: Service
metadata:
  name: vault-ui-lb
  namespace: vault
  labels:
    app: vault
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 80
      targetPort: 8200
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8200
      protocol: TCP
  selector:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
    component: server
