deploy/infrastructure/traefik-ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-traefik-ingress
  namespace: victoriametrics
  labels:
    app: grafana
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
  - host: grafana.techbit.su
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vm-stack-2-grafana
            port:
              number: 80
